--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Прект для закрепления навыков работы с инструментами бенекд-направления.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "npx eslint ."
   },
   "repository": {
     "type": "git",
