--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Прект для закрепления навыков работы с инструментами бенекд-направления.",
   "main": "index.js",
   "scripts": {
-    "lint": "npx eslint ."
+    "lint": "npx eslint .",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,10 @@
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0"
+  },
+  "dependencies": {
+    "express": "^4.18.1",
+    "mongoose": "5.4",
+    "nodemon": "^2.0.19"
   }
 }
