--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "eslint-plugin-import": "^2.26.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "mongoose": "5.4",
+    "mongoose": "^5.13.14",
     "nodemon": "^2.0.19"
   }
 }
