fix: grammar mistake

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mesto-backend",
   "version": "1.0.0",
-  "description": "Прект для закрепления навыков работы с инструментами бенекд-направления.",
+  "description": "Проект для закрепления навыков работы с инструментами бенекд-направления.",
   "main": "app.js",
   "scripts": {
     "lint": "npx eslint .",
