--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "mongoose": "^5.13.14"
+    "mongoose": "^5.13.14",
+    "validator": "^13.7.0"
   }
 }
